--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "recharts": "^3.1.0"
   },
   "devDependencies": {
+    "rollup": "4.21.2",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -31,5 +32,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "vite": "^7.0.4"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
