--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "buildCommand": "pnpm install && pnpm run build"
+  "build": {
+    "env": {
+      "NODE_VERSION": "20"
+    }
+  },
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
