--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
@@ -19,7 +20,6 @@
     "recharts": "^3.1.0"
   },
   "devDependencies": {
-    "rollup": "4.21.2",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "rollup": "4.21.2",
     "tailwindcss": "^3.4.3",
     "vite": "^7.0.4"
   },
