--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.7.0",
+    "react-tooltip": "^5.29.1",
+    "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
