added demographics form

--- a/src/data/form_options.yml
+++ b/src/data/form_options.yml
@@ -140,3 +140,15 @@ form_completed_by:
   - hello
   - cccc
   - Pppppp
+
+district:
+  - Chitipa
+  - Karonga
+  - Lilongwe
+  - Blantyre
+  - Mangochi 
+
+region:
+  - North
+  - Central
+  - South
